# idf-new

./: .gitignore  CLAUDE.md  README.md  add_license_headers.sh  pyproject.toml
.claude/skills/newboard/: SKILL.md
boards/cyd/cyd28_ili9341_touch/: README.md  board.json  board_impl.c  idf_component.yml  sdkconfig.defaults
boards/cyd/cyd35_st7796_touch/: README.md  board.json  board_impl.c  idf_component.yml
boards/espressif/esp32s3_devkitc_nhd240320_st7789/: README.md  board.json  board_impl.c
boards/generic/: README.md  board.json  board_impl.c
boards/hackerbox/hb107_round128/: README.md  board.json  board_impl.c  idf_component.yml
boards/hackerbox107-128-round/: README.md
boards/lilygo/t4s3_amoled_touch/: README.md  board.json  board_impl.c  idf_component.yml  main.cmake.extra  power_driver.cpp  power_driver.h  sdkconfig.defaults  touch_min.c  touch_min.h
boards/m5stack/tab5/: board.json  (+3 more)
boards/wvshr_1.28_esp32/: board_impl.c
boards/wvshr_1.85_esp32s3/: README.md  board_impl.c  idf_component.yml
boards/wvshr_1.85_esp32s3_touch/: board_impl.c
boards/wvshr_2.0_esp32s3_touch/: README.md  board_impl.c  idf_component.yml
docs/: graphics-optimization.md
esp32_init_tool/: pyproject.toml
esp32_init_tool/esp32_init/: boards.py  cli.py  generator.py  paths.py  project.py
esp32_init_tool/esp32_init/features/: __init__.py  base.py  gps.py
features/gps/: gps.c
idf-templates/base_project/: .gitignore
idf-templates/base_project/main/: CMakeLists.txt  board_defaults.c  board_if.h  board_interface.h  main.c
idf_new_tool/: pyproject.toml
idf_new_tool/idf_new/: __init__.py  boards.py  cli.py  generator.py  idf_new_ext.py  manifest.py  paths.py  project.py
idf_new_tool/idf_new/features/: __init__.py  base.py  gps.py
idf_new_tool/idf_new/modules/: __init__.py  base.py  gps.py  sim.py
tests/: conftest.py
tests/integration/: test_features.py  test_scaffold.py
tests/unit/: test_boards.py  test_manifest.py  test_modules.py  test_project.py
(+68 files in other folders)
