[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esp32-init"
version = "0.1.0"
description = "ESP32 Starter project generator for ESP-IDF"
authors = [{ name = "David M. King" }]
license = { text = "Apache-2.0" }
readme = "../README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
esp32-init = "esp32_init.cli:main"

[tool.setuptools.packages.find]
where = ["esp32_init_tool"]
