[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idf-new"
version = "0.1.0"
description = "idf-new project generator for ESP-IDF"
authors = [{ name = "David M. King" }]
license = { text = "Apache-2.0" }
readme = "../README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
idf-new = "idf_new.cli:main"

[tool.setuptools.packages.find]
where = ["idf_new_tool"]
