set(EXTRA_REQUIRES "")
set(EXTRA_SRCS "")
set(EXTRA_DEFINES "")

if(EXISTS "${CMAKE_CURRENT_LIST_DIR}/main.cmake.extra")
    include(${CMAKE_CURRENT_LIST_DIR}/main.cmake.extra)
endif()

idf_component_register(
    SRCS "main.c" "board_impl.c" "board_defaults.c" ${EXTRA_SRCS}
    INCLUDE_DIRS "."
    REQUIRES ${EXTRA_REQUIRES}
)

if(EXTRA_DEFINES)
    target_compile_definitions(${COMPONENT_LIB} PRIVATE ${EXTRA_DEFINES})
endif()
